--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap');
+// Variables
 $font-style: 'Montserrat', sans-serif;
 $main_font_color: white;
 $secondary-color: rgb(51, 133, 255);
+$error-color: rgb(231, 78, 78);
+$success-color: rgb(119, 209, 107);
+
+// Global Styles
 
 * {
   margin: 0;
@@ -22,13 +27,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  width: 100vw;
-  height: 100vh;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   background: url('../background.jpg');
   object-fit: contain;
   background-position: center;
   background-size: cover;
+
+  // Form
 
   .form-container {
     border: 10px solid $secondary-color;
@@ -36,7 +43,8 @@ body {
     border-top-right-radius: 13px;
 
     .form {
-      padding: 3rem;
+      width: 700px;
+      padding: 2rem;
       background: #3b21a7;
 
       h1 {
@@ -44,7 +52,7 @@ body {
         margin: 0.9rem 0;
         text-transform: uppercase;
       }
-      p {
+      .form__info {
         margin: 0 0 4rem 0;
       }
     }
@@ -53,10 +61,6 @@ body {
 
 .form__input-container {
   width: 100%;
-
-  label {
-    margin: 0.7rem 0;
-  }
 
   .form__input {
     width: 100%;
@@ -69,22 +73,46 @@ body {
     margin: 1rem 0;
     padding: 0.5rem 1rem;
     color: $secondary-color;
+    position: relative;
+    transition: all 700ms ease-in-out;
+  }
+  .error {
+    border-bottom: 2px solid $error-color;
+  }
+
+  .success {
+    border-bottom: 2px solid $success-color;
+  }
+
+  .error__message {
+    color: $error-color;
+    visibility: hidden;
+    margin: 0 0 2rem 0;
+  }
+
+  .visible {
+    visibility: visible;
   }
 }
 
-.btn {
-  margin: 1rem 0 0 0;
-  padding: 0.8rem 3rem;
-  background: none;
-  border: 2px solid white;
-  font-size: 1.5rem;
-  color: $main_font_color;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: all 300ms ease;
+.form__button-container {
+  margin: 1rem 0;
+  text-align: center;
 
-  &:hover {
-    background: $main_font_color;
-    color: black;
+  .btn {
+    padding: 0.8rem 3rem;
+    background: none;
+    border: 2px solid white;
+    font-size: 1.5rem;
+    color: $main_font_color;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 300ms ease;
+    outline: none;
+
+    &:hover {
+      background: $main_font_color;
+      color: black;
+    }
   }
 }
